# ManagerTask

./: .gitignore  ManagerTask.sln  docker-compose.yml
.github/workflows/: main.yml
ManagerTask/Properties/: launchSettings.json
src/ManagerTask.API/: ManagerTask.API.csproj  Program.cs  appsettings.json
src/ManagerTask.Application/: ManagerTask.Application.csproj
src/ManagerTask.Domain/: ManagerTask.Domain.csproj
tgBot/: .env  .env.tgBot  pyproject.toml
tgBot/src/tgbot/: main.py
tgBot/src/tgbot/config/: config.py
tgBot/src/tgbot/exceptions/: table_not_found.py  task_already_exists_exception.py  task_invalid_send_time_past.py  task_not_found.py  user_already_exists.py  user_not_found.py
tgBot/src/tgbot/handlers/: commands_handlers.py  notifications_handler.py  rabbit_handler.py  tables_handler.py  tasks_handler.py
tgBot/src/tgbot/keyboards/: keyboards.py
tgBot/src/tgbot/models/: notification_message.py  telegram_message.py
tgBot/src/tgbot/models/notifications/: create_notification_request.py  get_notification_by_id_response.py  get_notifications_response.py  notification_dto.py
tgBot/src/tgbot/models/tables/: table_dto.py
tgBot/src/tgbot/models/tasks/: create_task_request.py  get_task_repsponse.py  get_tasks_response.py  task_dto.py
tgBot/src/tgbot/models/users/: create_user_request.py  user_dto.py
tgBot/src/tgbot/services/: health_check_service.py  notifications_service.py  tasks_service.py  users_service.py
tgBot/src/tgbot/states/: create_notification.py  form.py  get_task.py  get_tasks_by_table_name.py
(+137 files in other folders)
